Change footer title

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 
 		<div id="content">
-			<h1>About Anna Bella</h1>
+			<h1 style="color: red;">About Anna Bella</h1>
 			<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elit ante, congue at egestas non, rhoncus vel ligula. Phasellus mollis pulvinar ullamcorper. Mauris convallis consequat elit, non tincidunt mi elementum non. In id libero sed est molestie ornare. Aenean interdum tellus id malesuada lacinia. Nulla eros leo, dignissim sit amet varius sed, bibendum nec velit.</p>
 
@@ -27,7 +27,7 @@
 		</div>
 
 		<div id="footer">
-			<h4 class="center">Todos os direitos reservados</h4>
+			<h4 class="center">All rights reserved</h4>
 		</div>
 
 	</div>
