--- a/biography.html
+++ b/biography.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<div id="footer">
-			<h4 class="center">Todos os direitos reservados</h4>
+			<h4 class="center">All rights reserved</h4>
 		</div>
 
 	</div>
