--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 		</div>
 
 		<div id="footer">
-			<h4 class="center">Todos os direitos reservados</h4>
+			<h4 class="center">All rights reserved</h4>
 		</div>
 
 	</div>
